--- a/test/tc.gate4/config.2
+++ b/test/tc.gate4/config.2
@@ -1,5 +1,5 @@
 #
-# $Id: config.2,v 1.3 1998/01/28 22:00:30 mj Exp $
+# $Id: config.2,v 1.4 1999/03/14 20:44:14 mj Exp $
 #
 # Test config.gate with RFCLevel 2, UseOrganizationForOrigin
 #
@@ -8,4 +8,4 @@
 RFCLevel 2
 UseOrganizationForOrigin
 
-include ../cf/gate.conf
+include ../cf/fidogate.conf
